--- a/BoyumFoosballStats/Components/PlayerCard/PlayerCard.razor
+++ b/BoyumFoosballStats/Components/PlayerCard/PlayerCard.razor
@@ -1,4 +1,4 @@
-﻿<MudPaper Elevation="5" Class="rounded-lg pa-8 h-100 mud-background-gray">
+﻿<MudPaper Elevation="5" Class="rounded-lg pa-4 pa-sm-8 h-100 mud-background-gray">
     <div class="w-100 d-flex justify-space-between mb-8">
         <MudText Typo="Typo.h4">@SelectedPlayer?.Name</MudText>
         <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="HandleClosePlayerCard"></MudIconButton>
