--- a/BoyumFoosballStats/Components/PlayerRankingsTable/PlayerRankingsTable.razor
+++ b/BoyumFoosballStats/Components/PlayerRankingsTable/PlayerRankingsTable.razor
@@ -1,4 +1,4 @@
-﻿<MudTable T="Player" RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc" Items="@Players" OnRowClick="HandlePlayerClicked" Class="mud--theme-dark pt-8 px-0 px-md-8 rounded-lg" Elevation="5" Bordered="false" Outlined="false" Hover="true" Breakpoint="Breakpoint.None">
+﻿<MudTable T="Player" RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc" Items="@Players" OnRowClick="HandlePlayerClicked" Class="mud--theme-dark pt-8 px-0 px-md-8 rounded-lg" Elevation="5" Hover="true" Breakpoint="Breakpoint.None">
     <ToolBarContent>
         <MudText Typo="Typo.h4" Class="mb-8">Player rankings</MudText>
     </ToolBarContent>
