--- a/BoyumFoosballStats/Components/Charts/MatchesPlayedChart.razor
+++ b/BoyumFoosballStats/Components/Charts/MatchesPlayedChart.razor
@@ -1,12 +1,23 @@
 ﻿@inherits ChartComponentBase
 
-<RadzenChart>
+<RadzenChart Style="height: 250px;">
     <RadzenLineSeries Smooth="true" Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)" Title="Matches">
-        <RadzenMarkers MarkerType="MarkerType.Circle"/>
-        <RadzenSeriesDataLabels Visible="false"/>
+        <ChildContent>
+            <RadzenMarkers MarkerType="MarkerType.Circle"/>
+            <RadzenSeriesDataLabels Visible="false"/>
+        </ChildContent>
+        <TooltipTemplate>
+            <MudText Typo="Typo.body2">@FormatAsWeekRange(context.XData)</MudText>
+            <MudText Typo="Typo.body2">
+                Matches: <b>@context.YData</b>
+            </MudText>
+        </TooltipTemplate>
     </RadzenLineSeries>
-    <RadzenValueAxis >
+    <RadzenValueAxis>
         <RadzenGridLines Visible="true"/>
     </RadzenValueAxis>
+    <RadzenCategoryAxis Formatter="@FormatAsWeekNumber">
+        <RadzenAxisTitle Text="Week"/>
+    </RadzenCategoryAxis>
     <RadzenLegend Visible="false"/>
 </RadzenChart>
