--- a/BoyumFoosballStats/Components/Charts/WinRateByWeekChart.razor
+++ b/BoyumFoosballStats/Components/Charts/WinRateByWeekChart.razor
@@ -1,12 +1,20 @@
 ﻿@inherits ChartComponentBase
 
-<RadzenChart>
+<RadzenChart Style="height: 250px;">
     <RadzenLineSeries Smooth="true" Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)" Title="Win Rate">
         <RadzenMarkers MarkerType="MarkerType.Circle"/>
         <RadzenSeriesDataLabels Visible="false"/>
     </RadzenLineSeries>
-    <RadzenValueAxis Formatter="@FormatAsPercentage">
+    <RadzenValueAxis Formatter="@FormatAsPercentage" Step="0.25" Min="0" Max="1">
         <RadzenGridLines Visible="true"/>
     </RadzenValueAxis>
+    <RadzenCategoryAxis>
+        <RadzenAxisTitle Text="Week"/>
+    </RadzenCategoryAxis>
     <RadzenLegend Visible="false"/>
 </RadzenChart>
+
+@code {
+    private string _min = "0%";
+    private string _max = "100%";
+}
