--- a/BoyumFoosballStats/Pages/MatchHistory/MatchHistory.razor
+++ b/BoyumFoosballStats/Pages/MatchHistory/MatchHistory.razor
@@ -52,7 +52,7 @@
             </MudTd>
             <MudTd Class="d-none d-sm-table-cell">
                 <div class="w-100 d-flex justify-end">
-                    <MudIconButton Variant="Variant.Filled" Icon="@Icons.Material.Filled.Delete" OnClick="() => ViewModel.DeleteMatch(context)" Color="Color.Error"/>
+                    <MudIconButton Disabled="true" Variant="Variant.Filled" Icon="@Icons.Material.Filled.Delete" OnClick="() => ViewModel.DeleteMatch(context)" Color="Color.Error"/>
                 </div>
             </MudTd>
         </RowTemplate>
