Ordered lists alphabetically by name

--- a/BoyumFoosballStats/Components/TeamCard/TeamCard.razor
+++ b/BoyumFoosballStats/Components/TeamCard/TeamCard.razor
@@ -1,13 +1,13 @@
 ﻿<MudPaper Elevation="4" MinHeight="200px" Class="@ViewModel.WrapperClasses">
     <div class="d-flex gap-8">
         <MudSelect T="Player" Value="@TeamInfo!.Defender" ValueChanged="ViewModel.HandleDefenderChanged" Label="@ViewModel.GetDefenderName()" Class="w-0" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Security">
-            @foreach (var player in PlayersList!)
+            @foreach (var player in PlayersList!.OrderBy(x=>x.Name))
             {
                 <MudSelectItem T="Player" Value="@player">@player.Name</MudSelectItem>
             }
         </MudSelect>
         <MudSelect T="Player" Value="@TeamInfo!.Attacker" ValueChanged="ViewModel.HandleAttackerChanged" Label="@ViewModel.GetAttackerName()" Class="w-0" Variant="Variant.Outlined" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Bolt">
-            @foreach (var player in PlayersList!)
+            @foreach (var player in PlayersList!.OrderBy(x=>x.Name))
             {
                 <MudSelectItem T="Player" Value="@player">@player.Name</MudSelectItem>
             }
