--- a/BoyumFoosballStats/wwwroot/css/site.css
+++ b/BoyumFoosballStats/wwwroot/css/site.css
@@ -290,3 +290,10 @@ px-4 {
 .rankings-pagination .mud-table-pagination {
     margin-top: auto;
 }
+
+.grid-item-transition {
+    transition: flex-basis 400ms cubic-bezier(0.4, 0.14, 0.3, 1);
+}
+.grid-item-hidden {
+    flex-basis: 0;
+}
