changed chart position + added more weeks

--- a/BoyumFoosballStats/Components/Charts/TrueSkillByWeekChart.razor
+++ b/BoyumFoosballStats/Components/Charts/TrueSkillByWeekChart.razor
@@ -6,6 +6,7 @@
         <ChildContent>
             <RadzenMarkers MarkerType="MarkerType.Circle"/>
             <RadzenSeriesDataLabels Visible="false"/>
+            <RadzenSeriesTrendLine Stroke="var(--mud-palette-dark-lighten)" LineType="LineType.Dashed" />
         </ChildContent>
         <TooltipTemplate>
             <MudText Typo="Typo.body2">@FormatAsWeekRange(context.XData)</MudText>
