--- a/BoyumFoosballStats/Components/PlayerRankingsTable/PlayerRankingsTable.razor
+++ b/BoyumFoosballStats/Components/PlayerRankingsTable/PlayerRankingsTable.razor
@@ -1,5 +1,5 @@
 ﻿@using BoyumFoosballStats.Shared.Extensions
-<MudTable T="Player" RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc" Items="@Players" OnRowClick="HandlePlayerClicked" Class="mud--theme-dark pt-8 px-0 px-md-8 rounded-lg h-100 d-flex flex-column rankings-pagination" Elevation="5" Hover="true" Breakpoint="Breakpoint.None">
+<MudTable T="Player" RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc" Items="@Players" OnRowClick="HandlePlayerClicked" Class="mud--theme-dark pt-8 px-0 px-md-8 rounded-lg d-flex flex-column rankings-pagination" Elevation="5" Hover="true" Breakpoint="Breakpoint.None">
     <ToolBarContent>
         <MudText Typo="Typo.h4" Class="mb-8">Player rankings</MudText>
     </ToolBarContent>
