--- a/BoyumFoosballStats/Pages/PlayerDashboard/PlayerDashboard.razor
+++ b/BoyumFoosballStats/Pages/PlayerDashboard/PlayerDashboard.razor
@@ -8,7 +8,16 @@
             {
                 <PlayerCard @bind-SelectedPlayer="ViewModel.SelectedPlayer">
                     <MudGrid>
-                        @if (ViewModel.MatchesWeekChartData.Any())
+                        @if (ViewModel.HighestTrueSkillByWeekChartData.Any() && ViewModel.LowestTrueSkillByWeekChartData.Any())
+                        {
+                            <MudItem xs="12" lg="12">
+                                <MudPaper Elevation="2" Class="pa-4 rounded-lg">
+                                    <MudText Typo="Typo.h6">TrueSkill evolution</MudText>
+                                    <TrueSkillByWeekChart Data="ViewModel.HighestTrueSkillByWeekChartData" SecondaryData="ViewModel.LowestTrueSkillByWeekChartData"></TrueSkillByWeekChart>
+                                </MudPaper>
+                            </MudItem>
+                        }
+                        @if (ViewModel.WinRateByWeekChartData.Any())
                         {
                             <MudItem xs="12" lg="6">
                                 <MudPaper Elevation="2" Class="pa-4 rounded-lg">
@@ -35,15 +44,7 @@
                                 </MudPaper>
                             </MudItem>
                         }
-                        @if (ViewModel.HighestTrueSkillByWeekChartData.Any() && ViewModel.LowestTrueSkillByWeekChartData.Any())
-                        {
-                            <MudItem xs="12" lg="6">
-                                <MudPaper Elevation="2" Class="pa-4 rounded-lg">
-                                    <MudText Typo="Typo.h6">TrueSkill evolution</MudText>
-                                    <TrueSkillByWeekChart Data="ViewModel.HighestTrueSkillByWeekChartData" SecondaryData="ViewModel.LowestTrueSkillByWeekChartData"></TrueSkillByWeekChart>
-                                </MudPaper>
-                            </MudItem>
-                        }
+
                     </MudGrid>
                 </PlayerCard>
             }
