--- a/BoyumFoosballStats/Components/PlayerRankingsTable/PlayerRankingsTable.razor
+++ b/BoyumFoosballStats/Components/PlayerRankingsTable/PlayerRankingsTable.razor
@@ -1,4 +1,12 @@
 ﻿@using BoyumFoosballStats.Shared.Extensions
+@using BoyumFoosballStats.Enums
+
+<MudSelect T="PlayerPosition" ValueChanged="PlayerPositionChanged">
+    @foreach (var position in Enum.GetValues(typeof(PlayerPosition)))
+    {
+        <MudSelectItem Value="(PlayerPosition)position">@position</MudSelectItem>
+    }
+</MudSelect>
 <MudTable T="Player" RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc" Items="@Players" OnRowClick="HandlePlayerClicked" Class="mud--theme-dark pt-8 px-0 px-md-8 rounded-lg d-flex flex-column rankings-pagination" Elevation="5" Hover="true" Breakpoint="Breakpoint.None">
     <ToolBarContent>
         <MudText Typo="Typo.h4" Class="mb-8">Player rankings</MudText>
@@ -20,14 +28,14 @@
         <MudTd DataLabel="Name">@context.Name</MudTd>
         <MudTd DataLabel="TrueSkillRating">
             <div class="d-flex align-center">
-                <MudProgressLinear Style="max-width: 150px" Color="Color.Success" Rounded="true" Size="Size.Medium" Value="@((double)context.TrueSkillRating?.Mean!)" Max="MaxTrueSkill" Class="ml-3 d-none d-sm-inline-block"/>
-                <MudText Typo="Typo.inherit" Inline="true" Class="pl-2">@context.TrueSkillRating?.Mean.ToTrueSkillString()</MudText>
+                <MudProgressLinear Style="max-width: 150px" Color="Color.Success" Rounded="true" Size="Size.Medium" Value="@GetTrueSkillMean(context)" Max="MaxTrueSkill" Class="ml-3 d-none d-sm-inline-block"/>
+                <MudText Typo="Typo.inherit" Inline="true" Class="pl-2">@GetTrueSkillMean(context).ToTrueSkillString()</MudText>
             </div>
         </MudTd>
         <MudTd DataLabel="MatchesPlayed">
             <div class="d-flex align-center">
-                <MudProgressLinear Style="max-width: 150px" Color="Color.Warning" Rounded="true" Size="Size.Medium" Value="@((double)context.MatchesPlayed!)" Max="MaxGames" Class="ml-3 d-none d-sm-inline-block"/>
-                <MudText Typo="Typo.inherit" Inline="true" Class="pl-2">@context.MatchesPlayed</MudText>
+                <MudProgressLinear Style="max-width: 150px" Color="Color.Warning" Rounded="true" Size="Size.Medium" Value="@((double)GetmatchesPlayed(context))" Max="MaxGames" Class="ml-3 d-none d-sm-inline-block"/>
+                <MudText Typo="Typo.inherit" Inline="true" Class="pl-2">@GetmatchesPlayed(context)</MudText>
             </div>
         </MudTd>
     </RowTemplate>
